--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,27 +12,27 @@ dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.3
 
-  flutter_bloc: ^7.0.1
+  flutter_bloc: ^7.1.0
 
-  get_it: ^3.1.0
+  get_it: ^7.2.0
 
-  equatable: ^1.0.1
+  equatable: ^2.0.3
 
-  dartz: ^0.8.9
+  dartz: ^0.10.0-nullsafety.2
 
-  data_connection_checker: ^0.3.4
+  #data_connection_checker: ^0.3.4
 
-  http: ^0.12.0+3
+  http: ^0.13.3
 
   uuid: ^3.0.4
 
   shared_preferences: ^2.0.6
 
-  sqflite:
+  sqflite: ^2.0.0+3
 
-  path:
+  path: ^1.8.0
 
 dev_dependencies:
   flutter_test:
